# lag-sim

./: .gitignore  AGENTS.md  DESIGN.md  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.design-sync/: NOTES.md  config.json  conventions.md  ds-entry.ts  tokens.css
.github/workflows/: deploy-server.yml
client/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/e2e/: playthrough_audit.cjs
client/scripts/: benchmark.ts
client/src/: config.ts  index.css  main.tsx  router.tsx  version.test.ts  version.ts
docs/: LAGOS_GAME_ROADMAP.md.md  architecture.md  audit.md  build-log.md  commissioners.md  event-rules.md  game-over.md  how-to-play.md  legacy-system.md  maps.md  news-engine.md  npc-system.md  plan-svg-busts-and-share-card.md  portraits-system.md  revenue-expenditure.md  season-system.md  state-reference.md  winning-strategy.md
e2e/: playthrough_audit.cjs
scripts/: benchmark.ts  fetchLagosData.mjs
server/: Cargo.toml  Dockerfile  package.json
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250101_000001_create_health_check.rs  m20250710_000001_create_analytics_events.rs  m20250710_000002_create_cloud_saves.rs
server/src/: db.rs  main.rs  types.rs
server/src/analytics/: handlers.rs  mod.rs  models.rs  queries.rs  types.rs
server/src/saves/: handlers.rs  mod.rs  models.rs  queries.rs  types.rs
shared/: types.ts
src/: App.tsx  config.ts  index.css  main.tsx  router.tsx  version.ts
(+425 files in other folders)
