[workspace]
members = ["migration"]

[package]
name = "lag-sim-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio", "macros"] }
migration = { path = "migration" }
typeshare = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
